--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@parcel/bundler-default": "^2.9.1",
     "@parcel/transformer-babel": "^2.9.1",
+    "@parcel/transformer-inline-string": "^2.9.1",
+    "@parcel/transformer-typescript-types": "^2.9.1",
+    "@parcel/transformer-worklet": "^2.9.1",
     "axios": "^1.4.0",
     "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
