--- a/.parcelrc
+++ b/.parcelrc
@@ -1,11 +1,14 @@
 {
-  "extends": [
-    "@parcel/config-default"
-  ],
+  "transformers": {
+    "raw:*": ["@parcel/transformer-raw"]
+  }
+  ,
   "reporters": [
     "...",
     "parcel-reporter-clean-dist"
+  ],
+  "extends": [
+    "@parcel/config-default"
   ]
-  
 
 }
